# ambix-caf-writer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  ambix_basic_writer.cc  ambix_basic_writer.h  ambix_encoder.cc  ambix_encoder.h  big_endian.h  caf_writer.cc  caf_writer.h  main.cc
tests/: CMakeLists.txt  test_endianness.cc
